--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.12",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
