--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/react-redux": "^7.1.12",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-form": "^8.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   }
