--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "my-social-net-type",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://VovanVovanic.github.io/typeScriptReactSocialNet",
   "dependencies": {
+    "@ant-design/icons-svg": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.67",
@@ -14,7 +17,9 @@
     "@types/react-redux": "^7.1.12",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
@@ -22,13 +27,15 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
