--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://VovanVovanic.github.io/typeScriptReactSocialNet",
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@ant-design/icons-svg": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,7 +18,8 @@
     "@types/react-redux": "^7.1.12",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "antd": "^4.12.3",
+    "@types/sass": "^1.16.0",
+    "antd": "^4.13.0",
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "react": "^16.14.0",
@@ -27,6 +29,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.32.8",
     "typescript": "^4.1.5"
   },
   "scripts": {
